test/cases/compile_errors/using_an_unknown_len_ptr_type_instead_of_array.zig
const resolutions = [*][*]const u8{
    "[320 240  ]",
    null,
};
comptime {
    _ = resolutions;
}

// error
// backend=stage2
// target=native
//
// :1:21: error: type '[*][*]const u8' does not support array initialization syntax
